--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <section id="Landscapes">          
       <h2>Landscapes</h2>          
       <div class="slideup">          
-       <img src="pic1.jpg" class="slideup"/>          
-       <img src="pic2.jpg" class="slideup"/>          
-       <img src="pic3.jpg" class="slideup"/>          
+       <img src="Screenshot_20250906-100017.jpg" class="slideup"/>          
+       <img src="Screenshot_20250906-095959.jpg" class="slideup"/>          
+       <img src="Screenshot_20250906-095938.jpg" class="slideup"/>          
       <article>          
        <p>As you can see these are our landscape designs we have</p>          
      </article>          
