--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
       <h2>Real estates</h2>          
        <div class="slideup">          
        <article>          
-        <img src="pic1.jpg" class="slideup"/>          
-        <img src="pic2.jpg" class="slideup"/>          
+        <img src="Screenshot_20250906-095834.jpg"
+        class="slideup"/>          
+        <img src="Screenshot_20250906-095834.jpg" class="slideup"/>          
        <p>These are out real estates on sale <del>300,000,000</del> our prices are lower because we are about having the customer love the real-estates</p>          
        </article>          
       </div>          
