--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <section id="Landscapes">          
       <h2>Landscapes</h2>          
       <div class="slideup">          
-       <img src="Screenshot_20250906-100017.jpg" class="slideup"/>          
-       <img src="Screenshot_20250906-095959.jpg" class="slideup"/>          
-       <img src="Screenshot_20250906-095938.jpg" class="slideup"/>          
+       <img src="Screenshot_20250906-100017.jpg" class="slideup"/><br>        
+       <img src="Screenshot_20250906-095959.jpg" class="slideup"/><br>          
+       <img src="Screenshot_20250906-095938.jpg" class="slideup"/><br>         
       <article>          
        <p>As you can see these are our landscape designs we have</p>          
      </article>          
@@ -47,8 +47,8 @@
        <div class="slideup">          
        <article>          
         <img src="Screenshot_20250906-095834.jpg"
-        class="slideup"/>          
-        <img src="Screenshot_20250906-095834.jpg" class="slideup"/>          
+        class="slideup"/><br>          
+        <img src="Screenshot_20250906-095834.jpg" class="slideup"/>         
        <p>These are out real estates on sale <del>300,000,000</del> our prices are lower because we are about having the customer love the real-estates</p>          
        </article>          
       </div>          
